Refactor and Fix: Improve readability, update annotations, and resolve typos
- Reformatted blank lines for improved readability.
- Replaced @ApiResponses blocks with consecutive @ApiResponse annotations to reduce boilerplate.
- Updated deprecated MediaType.APPLICATION_JSON_UTF8_VALUE to MediaType.APPLICATION_JSON_VALUE.
- Simplified CustomErrorController by replacing @Controller + @RequestBody with @RestController.
- Corrected method name typo in NotificationController.
- Fixed multiple typos in ViberController.